[package]
name = "key-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
enigo = { version = "0.3.0", features = ["x11rb"] }
rdev = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["direct", "complex", "hold_and_release", "simulation", "mouse"]
no-simulation = ["direct", "complex", "hold_and_release", "mouse"]
direct = []
complex = []
hold_and_release = []
simulation = []
mouse = []

# Binary targets for each mode
[[bin]]
name = "key-listener"
path = "src/main.rs"

[[bin]]
name = "key-listener-direct"
path = "src/bin/direct.rs"
required-features = ["direct"]

[[bin]]
name = "key-listener-complex"
path = "src/bin/complex.rs"
required-features = ["complex"]

[[bin]]
name = "key-listener-hold-release"
path = "src/bin/hold_and_release.rs"
required-features = ["hold_and_release"]

[[bin]]
name = "key-listener-simulation"
path = "src/bin/simulation.rs"
required-features = ["simulation"]

[[bin]]
name = "key-listener-mouse"
path = "src/bin/mouse.rs"
required-features = ["mouse"]

[[bin]]
name = "key-listener-no-simulation"
path = "src/main.rs"
required-features = ["no-simulation"]
